# revolve2

./: .buildinfo  .gitignore  CONTRIBUTING.md  Download errors.txt  README.md  __init__.py.txt  arena.world.txt  config.pickle  contributors.txt  dev_install.sh  dev_requirements.sh  dev_requirements.txt  genindex.html  genus_old.py  index copy.rst  index.html  index.md  log.txt  modules.html  network_representation.py.txt  nursery.world.txt  objects.inv  packages.txt  patch_requirements.txt  plane.world.txt  project.yml  py-modindex.html  requirements.txt  requirements_dev.txt  requirements_editable.txt  revolve2.analysis.core.html  revolve2.analysis.html  revolve2.core.database.html  revolve2.core.database.serialization.html  revolve2.core.database.sqlite.html  revolve2.core.html  revolve2.core.modular_robot.brains.html  revolve2.core.modular_robot.html  revolve2.core.optimization.ea.html  revolve2.core.optimization.ea.modular_robot.html  (+20 more)
actor_controller/: mypy.ini  pyproject.toml  run_mypy.sh  setup.py
actor_controller/revolve2/actor_controller/: __init__.py  _actor_controller.py
actor_controller/revolve2/actor_controllers/: __init__.py
adv_symmetry/: README.md  pyproject.toml  requirements.txt
adv_symmetry/src/adv_symmetry/: __init__.py  __main__.py  argument_schema.py  experiment.py  run.py
ci_group/: mypy.ini  pyproject.toml  run_mypy.sh
ci_group/revolve2/ci_group/: __init__.py  drones_v1.py  fitness_functions.py  logging.py  modular_robots.py  modular_robots_drones.py  modular_robots_v1.py  modular_robots_v2.py  morphological_measures.py  planar_robot_representation.py  simulation.py  simulation_parameters.py  terrains.py
core/: mypy.ini  pyproject.toml  run_mypy.sh  setup.py
core/docs/: Makefile  requirements.txt
core/docs/source/: conf.py  index.rst  revolve2.analysis.rst  revolve2.core.database.serialization.rst  revolve2.core.optimization.ea.modular_robot.rst  revolve2.core.physics.rst  revolve2.core.rst
core/revolve2/core/: __init__.py  evolutionary_optimizer.py
core/revolve2_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
experimentation/: mypy.ini  pyproject.toml  run_mypy.sh
experimentation/revolve2/experimentation/: __init__.py  logging.py
modular_robot/: mypy.ini  pyproject.toml
modular_robot/revolve2/aerial_robot/: __init__.py  _aerial_robot.py  _aerial_robot_control_interface.py
modular_robot/revolve2/modular_robot/: __init__.py  _active_hinge.py  _body.py  _body_state.py  _brain.py  _brick.py  _core.py  _create_batch_multiple_isolated_robots.py  _create_batch_single_robot.py  _directions.py  _drone_control_interface.py  _get_body_states_multiple_isolated_robots.py  _get_body_states_single_robot.py  _has_uuid.py  _modular_robot.py  _modular_robot_control_interface.py  _modular_robot_sensor_state.py  _modular_robotv2.py  _module.py  _morphological_measures.py  _properties.py
modular_robot_physical/: pyproject.toml  setup.py
modular_robot_physical/revolve2/: execute_controller.py
modular_robot_physical/revolve2/modular_robot_physical/: __init__.py  _brain_runner.py  _config.py  _hardware_type.py  _physical_robot_config.py  _physical_robot_controller.py  _protocol_version.py  _standard_port.py  _uuid_key.py  _version.py  execute_controller.py
modular_robot_simulation/: pyproject.toml  run_mypy.sh
modular_robot_simulation/revolve2/aerial_robot_simulation/: _modular_robot_control_interface_impl.py  _modular_robot_scene.py  _modular_robot_sensor_state_impl.py  _modular_robot_simulation_handler.py  _modular_robot_simulation_state.py  _motor_sensor_state_impl.py  _scene_simulation_state.py  _test_robot.py  _to_batch.py
modular_robot_simulation/revolve2/modular_robot_simulation/: __init__.py  _active_hinge_sensor_state_impl.py  _body_to_multi_body_system_converter.py  _convert_terrain.py  _imu_sensor_state_impl.py  _modular_robot_active_hinge_key.py  _modular_robot_control_interface_impl.py  _modular_robot_key.py  _modular_robot_scene.py  _simulate_scenes.py  (+8 more)
rpi_controller/: mypy.ini  pyproject.toml  run_mypy.sh  setup.py
rpi_controller_remote/: pyproject.toml  run_mypy.sh
runners/mujoco/: mypy.ini  pyproject.toml  run_mypy.sh  setup.py
serialization/: mypy.ini  pyproject.toml  run_mypy.sh  setup.py
simulation/: measures.py  mypy.ini  pyproject.toml  queue_balancer.py  run_mypy.sh  simulation.py  simulation_manager.py  simulation_supervisor.py
simulation/distributed/: robot_queue.py  simulation_supervisor.py  simulation_worker.py
simulation/handler/: analyzer_handler.py  experiment_handler.py  measurement_handler.py  simulation_handler.py
simulation/simulator/: connection.py  gazebo_connector_adapter.py  simulation_connector.py  simulation_proxy.py  simulator_connector.py  simulator_helper.py
simulation/states/: pool_state.py  simulation_context.py
simulators/mujoco/: mypy.ini  pyproject.toml  run_mypy.sh
simulators/mujoco_simulator/: pyproject.toml
standard_resources/: mypy.ini  pyproject.toml  run_mypy.sh  setup.py
tests/: README.md  __init__.py  conftest.py  pyproject.toml  requirements.txt
tests/examples/: __init__.py  _clear_example_modules_from_cache.py  _patched_batch_parameters.py  _test_evaluate_multiple_isolated_robots.py  _test_evaluate_single_robot.py  _test_experiment_setup.py  _test_robot_bodybrain_ea.py  _test_robot_bodybrain_ea_database.py  _test_robot_brain_cmaes.py  _test_simple_ea_xor.py  _test_simulate_single_robot.py  test_1a_simulate_single_robot.py  test_2b_brain_with_feedback.py  test_3a_experiment_setup.py  test_3b_evaluate_single_robot.py  test_3c_evaluate_multiple_isolated_robots.py  test_4a_simple_ea_xor.py  test_4d_robot_bodybrain_ea_database.py  test_4e_robot_brain_cmaes.py  test_brain_with_feedback.py  test_complex_examples.py  test_evaluate_multiple_isolated_robots.py  test_evaluate_single_robot.py  test_experiment_setup.py  test_robot_bodybrain_ea.py  test_robot_bodybrain_ea_database.py  test_robot_brain_cmaes.py  test_simple_ea_xor.py  test_simple_examples.py  test_simulate_single_robot.py
tests/reality_gap/: README.md  basic_hinge_tests.py  basic_movement_tests.py
(+3123 files in other folders)
