[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-actor-controller"
version = "0.4.1b2"
description = "Revolve2 actor controller interface and implementations."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
revolve2-serialization = { path = "../serialization", develop = true }
numpy = "^1.21.2"

[tool.poetry.extras]
dev = []
