[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-ci-group"
version = "0.4.2b2"
description = "Revolve2: Computational Intelligence Group experimentation tools and standards."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
revolve2-modular-robot-simulation = { path = "../modular_robot_simulation", develop = true }
noise = "^1.2.2"
multineat = "^0.11"
sqlalchemy = "^2.0.0"

[tool.poetry.extras]
dev = []
