[build-system]
requires = [
    "poetry-core>=1.6.0",
    "Cython>=3.0.4",
    "numpy>=1.21.2",
    "setuptools>=68.2.2",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-ci-group"
version = "1.0.2"
description = "Revolve2: Computational Intelligence Group experimentation tools and standards."
readme = "../README.md"
authors = [
    "Aart Stuurman <aartstuurman@hotmail.com>",
    "Oliver Weissl <o.weissl@vu.nl>",
]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
packages = [{ include = "revolve2" }]
include = [
    { path = "revolve2/ci_group/morphological_novelty_metric/calculate_novelty*.*", format = "wheel" },
]

[tool.poetry.build]
script = "revolve2/ci_group/morphological_novelty_metric/_build_cmodule.py"

[tool.poetry.dependencies]
python = "^3.10,<3.12"
revolve2-modular-robot-simulation = "1.0.2"
noise = "^1.2.2"
multineat = "^0.12"
sqlalchemy = "^2.0.0"
numpy = "^1.21.2"
Cython = "^3.0.4"
setuptools = "^68.2.2"
opencv-contrib-python = "^4.9.0.80"
opencv-python = "^4.9.0.80"

[tool.poetry.extras]
dev = []
