[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-core"
version = "0.3.9b1"
description = "Core package for revolve2."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.scripts]
revolve2_plot_ea_fitness_float = "revolve2.bin.core.optimization.ea.generic_ea.plot_ea_fitness_float:main"

[tool.poetry.dependencies]
python = "^3.8"
revolve2-actor-controller = { path = "../actor_controller", develop = true }
numpy = "^1.21.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
pyrr = "^0.10.3"
sqlalchemy = "^2.0.0"
asyncssh = "^2.9.0"
aiosqlite = "^0.17.0"

[tool.poetry.extras]
dev = []
