[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-experimentation"
version = "0.4.0b2"
description = "Revolve2 experimentation tools."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
revolve2-modular-robot = { path = "../modular_robot", develop = true }
numpy = "^1.21.2"
sqlalchemy = "^2.0.0"
multineat = "^0.11"

[tool.poetry.extras]
dev = []
