[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-modular-robot"
version = "0.4.0b2"
description = "Revolve2 modular robot tools."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
revolve2-actor-controller = { path = "../actor_controller", develop = true }
revolve2-simulation = { path = "../simulation", develop = true }
pyrr = "^0.10.3"
numpy = "^1.21.2"

[tool.poetry.extras]
dev = []
