[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-modular-robot"
version = "0.4.2b2"
description = "Revolve2: Everything for defining modular robots."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.21.2"

[tool.poetry.extras]
dev = []
