[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-modular-robot-simulation"
version = "1.0.0rc1"
description = "Revolve2: Functionality to define scenes with modular robots in a terrain and simulate them."
readme = "../README.md"
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
revolve2-modular-robot = { path = "../modular_robot", develop = true }
revolve2-simulation = { path = "../simulation", develop = true }

[tool.poetry.extras]
dev = []
