[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-rpi-controller"
version = "0.3.9b1"
description = "Raspberry Pi controller for revolve2."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.scripts]
revolve2_rpi_controller = "revolve2.bin.rpi_controller.revolve2_rpi_controller:main"

[tool.poetry.dependencies]
python = "^3.8"
revolve2-actor-controller = { path = "../actor_controller", develop = true }
pigpio = "^1.78"
jsonschema = "^4.4.0"
adafruit-circuitpython-servokit = "^1.3.10"
types-jsonschema = { version = "^4.4.1", optional = true }

[tool.poetry.extras]
dev = ["types-jsonschema"]
