[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-simulation"
version = "0.4.2b2"
description = "Revolve2: Physics simulation abstraction layer."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.7.1"
pyrr = "^0.10.3"

[tool.poetry.extras]
dev = []
