[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-simulation"
version = "1.2.4"
description = "Revolve2: Physics simulation abstraction layer."
readme = "../README.md"
authors = [
    "Aart Stuurman <aartstuurman@hotmail.com>",
    "Oliver Weissl <o.weissl@vu.nl>",
    "Kevin Godin-Dubois <k.j.m.godin-dubois@vu.nl>",
]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
pyrr = "^0.10.3"
scipy = "^1.7.1"

[tool.poetry.extras]
dev = []
