[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-standard-resources"
version = "0.3.9b1"
description = "Standard resources such as environments and robots that can be used for testing and research."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
revolve2-core = { path = "../core", develop = true }
noise = "^1.2.2"

[tool.poetry.extras]
dev = []
