[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-runners-mujoco"
version = "0.3.9b1"
description = "Mujoco runner for Revolve2."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
revolve2-core = { path = "../../core", develop = true }
mujoco-python-viewer = "^0.1.2"
mujoco = "^2.2.0"
dm-control = "^1.0.3"
opencv-python = "^4.6.0.66"
# this dependency is only here because it is missing from the mujoco-python-viewer package.
pyyaml = "^6.0"

[tool.poetry.extras]
dev = []
