[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-simulators-mujoco"
version = "0.4.0b2"
description = "Revolve2 mujoco simulator."
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10"
revolve2-modular-robot = { path = "../../modular_robot", develop = true }
revolve2-simulation = { path = "../../simulation", develop = true }
pyrr = "^0.10.3"
mujoco-python-viewer = "^0.1.3"
mujoco = "^2.2.0"
dm-control = "^1.0.3"
opencv-python = "^4.6.0.66"

[tool.poetry.extras]
dev = []
