[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "revolve2-mujoco-simulator"
version = "1.1.1"
description = "Revolve2: MuJoCo simulator."
readme = "../../README.md"
authors = [
    "Aart Stuurman <aartstuurman@hotmail.com>",
    "Oliver Weissl <o.weissl@vu.nl>",
    "Kevin Godin-Dubois <k.j.m.godin-dubois@vu.nl>",
]
repository = "https://github.com/ci-group/revolve2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
packages = [{ include = "revolve2" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
revolve2-simulation = "1.1.1"
mujoco-python-viewer = "^0.1.3"
mujoco = "^2.2.0"
dm-control = "^1.0.3"
opencv-python = "^4.6.0.66"

[tool.poetry.extras]
dev = []
